# briefbridge

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.pt.md  fix_ext.py  pyproject.toml
examples/: claude_code_setup.md  claude_desktop_config.json  codex_config.yaml  full_flow_example.py  vscode_settings.jsonc
src/briefbridge/: __init__.py  cli.py  config.py  mcp_server.py
src/briefbridge/adapters/: base.py  claude.py  codex.py  copilot.py  registry.py
src/briefbridge/extract/: deterministic.py  heuristic.py
src/briefbridge/ingest/: manager.py
src/briefbridge/models/: __init__.py  enums.py  handoff.py
src/briefbridge/render/: json_export.py  markdown.py  plain_text.py
src/briefbridge/services/: handoff.py  search.py  sessions.py
src/briefbridge/storage/: sqlite.py
src/briefbridge/wrappers/: __init__.py  claude.py  codex.py  copilot.py
tests/: conftest.py  test_cli.py  test_mcp_server.py  test_models.py  test_storage.py
tests/fixtures/claude/sessions/: 12345.json
tests/fixtures/codex/: session_index.jsonl
tests/fixtures/copilot/ws-hash-001/: workspace.json
tests/fixtures/copilot/ws-hash-001/chatSessions/: copilot-sess-001.jsonl
tests/test_adapters/: test_claude.py  test_codex.py  test_copilot.py
tests/test_extract/: test_deterministic.py  test_heuristic.py
tests/test_render/: test_renderers.py
tests/test_services/: test_pipeline.py
tests/test_wrappers/: test_claude.py  test_codex.py  test_copilot.py
vscode-ext/: .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-ext/src/: extension.ts
(+2 files in other folders)
