[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "briefbridge"
version = "0.1.0"
description = "Cross-agent session handoff for coding tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "BriefBridge Contributors" }]
keywords = ["cli", "handoff", "coding-agents", "session", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/TiagoSchr/briefbridge"
Repository = "https://github.com/TiagoSchr/briefbridge"
Issues = "https://github.com/TiagoSchr/briefbridge/issues"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0,<3.0",
    "rich>=13.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
bb = "briefbridge.cli:app"
briefbridge = "briefbridge.cli:app"
bb-mcp = "briefbridge.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/briefbridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
